# inter_frame_compress

CUDA_optim/: CMakeLists.txt  plots.py
CUDA_optim/include/: MotionVector.h  Residual.h  constants.h  frame.h
CUDA_optim/src/: MotionEstimation.cu  Residual.cu  main.cpp
Single_thread/: CMakeLists.txt  plots.py
Single_thread/include/: MotionVector.h  Residual.h  frame.h
Single_thread/src/: MotionEstimation.cpp  Residual.cpp  constants.cpp  main.cpp
